--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Frick Messenger</title>
+    <title>Epic Messenger</title>
     <style>
         body { 
             font-family: Arial; 
@@ -42,7 +42,7 @@
 <body>
     <div class="container">
         <h1>Frick</h1>
-        <p>Добро пожаловать в мессенджер Frick</p>
+        <p>Добро пожаловать в мессенджер Epic</p>
         <a href="/main.html" class="btn">Открыть мессенджер</a>
         <br>
         <small>Тестовый аккаунт: test@mail.ru / 123</small>
