--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="feature">👥 Поиск пользователей</div>
         </div>
         
-        <a href="/login.html" class="btn">🚀 Начать общение</a>
+        <a href="/auto" class="btn">🚀 Начать общение</a>
         
         <div class="test-accounts">
             <div><strong>Тестовые аккаунты:</strong></div>
