--- a/main.html
+++ b/main.html
@@ -22,6 +22,11 @@
             --warning-color: #fdcb6e;
             --glass-bg: rgba(255, 255, 255, 0.1);
             --glass-border: rgba(255, 255, 255, 0.2);
+            background: #0f1419;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         .theme-light {
@@ -38,12 +43,17 @@
             --warning-color: #ffc107;
             --glass-bg: rgba(0, 0, 0, 0.1);
             --glass-border: rgba(0, 0, 0, 0.2);
+            background: #ffffff;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         .theme-custom1 {
-            --bg-primary: #1a1f2e;
-            --bg-secondary: #252a3a;
-            --bg-tertiary: #2f3548;
+            --bg-primary: rgba(26, 31, 46, 0.9);
+            --bg-secondary: rgba(37, 42, 58, 0.9);
+            --bg-tertiary: rgba(47, 53, 72, 0.9);
             --border-color: #3a4157;
             --text-primary: #e6e6e6;
             --text-secondary: #8a9ba8;
@@ -54,12 +64,13 @@
             --warning-color: #fdcb6e;
             --glass-bg: rgba(138, 43, 226, 0.1);
             --glass-border: rgba(138, 43, 226, 0.2);
+            background: url('assets/tema1.png') center/cover fixed;
         }
 
         .theme-custom2 {
-            --bg-primary: #2d1b2e;
-            --bg-secondary: #3a2540;
-            --bg-tertiary: #472e4d;
+            --bg-primary: rgba(45, 27, 46, 0.9);
+            --bg-secondary: rgba(58, 37, 64, 0.9);
+            --bg-tertiary: rgba(71, 46, 77, 0.9);
             --border-color: #54375a;
             --text-primary: #e6e6e6;
             --text-secondary: #b8a9c9;
@@ -70,6 +81,7 @@
             --warning-color: #fdcb6e;
             --glass-bg: rgba(255, 107, 107, 0.1);
             --glass-border: rgba(255, 107, 107, 0.2);
+            background: url('assets/tema2.png') center/cover fixed;
         }
 
         body { 
@@ -80,6 +92,10 @@
             height: 100vh;
             overflow: hidden;
             transition: all 0.3s ease;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         /* Сайдбар */
@@ -1551,42 +1567,6 @@
         async function requestNotificationPermission() {
             if ('Notification' in window) {
                 notificationPermission = await Notification.requestPermission();
-            }
-        }
-
-        // Показать push уведомление
-        function showPushNotification(title, message, avatar = null) {
-            // Создаем HTML уведомление
-            const notification = document.createElement('div');
-            notification.className = 'push-notification';
-            notification.innerHTML = `
-                <div class="push-avatar">
-                    ${avatar ? `<img src="${avatar}" alt="${title}" style="width: 100%; height: 100%; border-radius: 50%;">` : '👤'}
-                </div>
-                <div class="push-content">
-                    <div class="push-title">${title}</div>
-                    <div class="push-message">${message}</div>
-                </div>
-                <button class="push-close" onclick="this.parentElement.remove()">×</button>
-            `;
-            
-            document.body.appendChild(notification);
-            
-            // Автоматическое удаление через 5 секунд
-            setTimeout(() => {
-                if (notification.parentElement) {
-                    notification.remove();
-                }
-            }, 5000);
-        }
-
-        // Показать браузерное уведомление
-        function showBrowserNotification(title, message) {
-            if (notificationPermission === 'granted') {
-                new Notification(title, {
-                    body: message,
-                    icon: '/assets/logo.png'
-                });
             }
         }
 
