--- a/public/login.html
+++ b/public/login.html
@@ -12,13 +12,46 @@
             display: flex; align-items: center; justify-content: center;
             min-height: 100vh; padding: 20px;
         }
+        .header {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+        .logo {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+        }
+        .logo-img {
+            width: 40px;
+            height: 40px;
+            border-radius: 8px;
+        }
+        .about-btn {
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            padding: 8px 15px;
+            border-radius: 20px;
+            text-decoration: none;
+            font-size: 14px;
+            transition: all 0.3s;
+        }
+        .about-btn:hover {
+            background: rgba(255, 255, 255, 0.3);
+        }
         .login-container {
             background: white; padding: 40px; border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.2); width: 100%; max-width: 400px;
         }
         .logo { text-align: center; margin-bottom: 30px; }
         .logo h1 { color: #333; margin-bottom: 10px; }
-        .logo p { color: #666; }
         .form-group { margin-bottom: 20px; }
         .form-group input {
             width: 100%; padding: 12px 15px; border: 1px solid #ddd;
@@ -81,10 +114,17 @@
     </style>
 </head>
 <body>
+    <div class="header">
+        <div class="logo">
+            <img src="/assets/logo.png" alt="Epic Messenger" class="logo-img" onerror="this.style.display='none'">
+            <span>Epic Messenger</span>
+        </div>
+        <a href="https://epic-messenger.onrender.com/about.html" class="about-btn">О мессенджере</a>
+    </div>
+
     <div class="login-container">
         <div class="logo">
             <h1>Epic Messenger</h1>
-            <p>Современная платформа для общения</p>
         </div>
         
         <form id="loginForm">
