--- a/public/about.html
+++ b/public/about.html
@@ -515,19 +515,19 @@
                 
                 <div class="slider-container">
                     <div class="slide">
-                        <img src="/public/assets/screenshot/main-chat.png" alt="Главный чат" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 400 400\"><rect width=\"100%\" height=\"100%\" fill=\"%23667eea\"/><text x=\"50%\" y=\"50%\" font-size=\"24\" text-anchor=\"middle\" dy=\".3em\" fill=\"white\">Главный чат</text></svg>'" />
+                        <img src="/assets/screenshot/main-chat.png" alt="Главный чат" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 400 400\"><rect width=\"100%\" height=\"100%\" fill=\"%23667eea\"/><text x=\"50%\" y=\"50%\" font-size=\"24\" text-anchor=\"middle\" dy=\".3em\" fill=\"white\">Главный чат</text></svg>'" />
                         <div class="slide-caption">Главный интерфейс чата</div>
                     </div>
                     <div class="slide">
-                        <img src="/public/assets/screenshot/contacts.png" alt="Лента" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 400 400\"><rect width=\"100%\" height=\"100%\" fill=\"%23764ba2\"/><text x=\"50%\" y=\"50%\" font-size=\"24\" text-anchor=\"middle\" dy=\".3em\" fill=\"white\">Лента</text></svg>'" />
+                        <img src="/assets/screenshot/contacts.png" alt="Лента" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 400 400\"><rect width=\"100%\" height=\"100%\" fill=\"%23764ba2\"/><text x=\"50%\" y=\"50%\" font-size=\"24\" text-anchor=\"middle\" dy=\".3em\" fill=\"white\">Лента</text></svg>'" />
                         <div class="slide-caption">Лента постов</div>
                     </div>
                     <div class="slide">
-                        <img src="/public/assets/screenshot/settings.png" alt="Система подарков" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 400 400\"><rect width=\"100%\" height=\"100%\" fill=\"%23ff8a00\"/><text x=\"50%\" y=\"50%\" font-size=\"24\" text-anchor=\"middle\" dy=\".3em\" fill=\"white\">Подарки</text></svg>'" />
+                        <img src="/assets/screenshot/settings.png" alt="Система подарков" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 400 400\"><rect width=\"100%\" height=\"100%\" fill=\"%23ff8a00\"/><text x=\"50%\" y=\"50%\" font-size=\"24\" text-anchor=\"middle\" dy=\".3em\" fill=\"white\">Подарки</text></svg>'" />
                         <div class="slide-caption">Система подарков</div>
                     </div>
                     <div class="slide">
-                        <img src="/public/assets/screenshot/themes.png" alt="Темы" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 400 400\"><rect width=\"100%\" height=\"100%\" fill=\"%2300b09b\"/><text x=\"50%\" y=\"50%\" font-size=\"24\" text-anchor=\"middle\" dy=\".3em\" fill=\"white\">Темы оформления</text></svg>'" />
+                        <img src="/assets/screenshot/themes.png" alt="Темы" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 400 400\"><rect width=\"100%\" height=\"100%\" fill=\"%2300b09b\"/><text x=\"50%\" y=\"50%\" font-size=\"24\" text-anchor=\"middle\" dy=\".3em\" fill=\"white\">Темы оформления</text></svg>'" />
                         <div class="slide-caption">Профили пользователей</div>
                     </div>
                 </div>
@@ -558,7 +558,7 @@
                 <div class="author-card">
                     <div class="author-header">
                         <div class="author-avatar">
-                            <img src="/public/assets/avtors/BayRex.png" alt="BayRex" onerror="this.innerHTML='BR'">
+                            <img src="/assets/avtors/BayRex.png" alt="BayRex" onerror="this.innerHTML='BR'">
                         </div>
                         <div class="author-info">
                             <h3>BayRex <span class="founder-badge">ОСНОВАТЕЛЬ</span></h3>
@@ -576,7 +576,7 @@
                 <div class="author-card">
                     <div class="author-header">
                         <div class="author-avatar">
-                            <img src="/public/assets/avtors/Limonat.png" alt="Limonat" onerror="this.innerHTML='L'">
+                            <img src="/assets/avtors/Limonat.png" alt="Limonat" onerror="this.innerHTML='L'">
                         </div>
                         <div class="author-info">
                             <h3>Limonat</h3>
@@ -594,7 +594,7 @@
                 <div class="author-card">
                     <div class="author-header">
                         <div class="author-avatar">
-                            <img src="/public/assets/avtors/lololo.png" alt="lololo" onerror="this.innerHTML='LL'">
+                            <img src="/assets/avtors/lololo.png" alt="lololo" onerror="this.innerHTML='LL'">
                         </div>
                         <div class="author-info">
                             <h3>lololo <span class="admin-badge">АДМИНИСТРАТОР</span></h3>
@@ -612,7 +612,7 @@
                 <div class="author-card">
                     <div class="author-header">
                         <div class="author-avatar">
-                            <img src="/public/assets/avtors/depresantov.png" alt="депресантов" onerror="this.innerHTML='Д'">
+                            <img src="/assets/avtors/depresantov.png" alt="депресантов" onerror="this.innerHTML='Д'">
                         </div>
                         <div class="author-info">
                             <h3>депресантов <span class="admin-badge">АДМИНИСТРАТОР</span></h3>
