--- a/public/about.html
+++ b/public/about.html
@@ -590,14 +590,14 @@
                     </div>
                 </div>
 
-                <!-- lololo -->
+                <!-- lololo000 -->
                 <div class="author-card">
                     <div class="author-header">
                         <div class="author-avatar">
                             <img src="/assets/avtors/lololo.png" alt="lololo" onerror="this.innerHTML='LL'">
                         </div>
                         <div class="author-info">
-                            <h3>lololo <span class="admin-badge">АДМИНИСТРАТОР</span></h3>
+                            <h3>lololo000 <span class="admin-badge">АДМИНИСТРАТОР</span></h3>
                             <div class="author-role">Тестировщик</div>
                         </div>
                     </div>
