--- a/public/login.html
+++ b/public/login.html
@@ -178,6 +178,14 @@
         const captchaInput = document.getElementById('captchaInput');
         const refreshCaptcha = document.getElementById('refreshCaptcha');
 
+        // Проверка авторизации
+        function checkAuth() {
+            const token = localStorage.getItem('authToken');
+            if (token) {
+                window.location.href = '/';
+            }
+        }
+
         // Генерация случайного кода капчи
         function generateCaptcha() {
             const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
@@ -206,7 +214,7 @@
             loginForm.style.display = 'none';
             registerForm.style.display = 'block';
             errorMessage.textContent = '';
-            updateCaptcha(); // Обновляем капчу при переключении
+            updateCaptcha();
         });
 
         switchToLogin.addEventListener('click', (e) => {
@@ -233,7 +241,7 @@
                 if (data.success) {
                     localStorage.setItem('authToken', data.token);
                     localStorage.setItem('deviceId', data.deviceId);
-                    // Исправленный редирект
+                    localStorage.setItem('userData', JSON.stringify(data.user));
                     window.location.href = '/';
                 } else {
                     errorMessage.textContent = data.message;
@@ -251,7 +259,6 @@
             const password = document.getElementById('regPassword').value;
             const captcha = captchaInput.value;
 
-            // Проверка капчи
             if (captcha !== captchaCode.textContent) {
                 errorMessage.textContent = 'Неверный код с картинки';
                 updateCaptcha();
@@ -270,17 +277,20 @@
                 if (data.success) {
                     localStorage.setItem('authToken', data.token);
                     localStorage.setItem('deviceId', data.deviceId);
-                    // Исправленный редирект
+                    localStorage.setItem('userData', JSON.stringify(data.user));
                     window.location.href = '/';
                 } else {
                     errorMessage.textContent = data.message;
-                    updateCaptcha(); // Обновляем капчу при ошибке
+                    updateCaptcha();
                 }
             } catch (error) {
                 errorMessage.textContent = 'Ошибка соединения';
-                updateCaptcha(); // Обновляем капчу при ошибке
+                updateCaptcha();
             }
         });
+
+        // Проверить авторизацию при загрузке
+        checkAuth();
     </script>
 </body>
 </html>
